--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,8 @@ verify_ssl = true
 [packages]
 beautifulsoup4 = "*"
 requests = "*"
-textblob = "*"
+time = "*"
+python-linkedin-v2 = "*"
 
 [requires]
 python_version = "3.7"
