--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,9 @@ verify_ssl = true
 [packages]
 beautifulsoup4 = "*"
 requests = "*"
-time = "*"
+python-linkedin = "*"
+selenium = "*"
+splinter = "*"
 python-linkedin-v2 = "*"
 
 [requires]
